--- a/package.json
+++ b/package.json
@@ -6,18 +6,22 @@
     "start": "node ./src/server/bin/www"
   },
   "dependencies": {
-    "body-parser": "~1.15.0",
     "bluebird": "^3.3.3",
+    "body-parser": "~1.15.0",
     "chai": "^3.5.0",
     "chai-http": "^2.0.1",
+    "connect-flash": "^0.1.1",
     "cookie-parser": "~1.4.1",
     "debug": "~2.2.0",
     "dotenv": "^2.0.0",
     "express": "~4.13.4",
+    "express-session": "^1.13.0",
     "knex": "^0.10.0",
     "lodash": "^4.5.1",
     "mocha": "^2.4.5",
     "morgan": "~1.7.0",
+    "passport": "^0.3.2",
+    "passport-local": "^1.0.0",
     "pg": "^4.5.1",
     "serve-favicon": "~2.3.0",
     "swig": "^1.4.2"
